# opentera-webrtc-ros

./: .clang-format  .gitignore  .gitmodules  README.md
face_cropping/: CMakeLists.txt  README.md  package.xml
face_cropping/dnn_training/: evaluate_opencv_face_detector.py  export_detector.py  program_arguments.py  requirements.txt  test_detector.py  test_head_detector.py  train_backbone.py  train_detector.py  train_head_detector.py
face_cropping/launch/: face_cropping.launch  face_cropping.launch.xml  face_cropping_webrtc.launch  face_cropping_webrtc.launch.xml  test_face_cropping.launch  test_face_cropping.launch.xml  test_face_cropping_webrtc.launch  test_face_cropping_webrtc.launch.xml
face_cropping/models/: small_yunet_0.25_silu_160.pt  small_yunet_0.25_silu_160.pt.cuda  small_yunet_0.25_silu_320.pt  small_yunet_0.25_silu_320.pt.cuda  small_yunet_0.25_silu_640.pt  small_yunet_0.25_silu_640.pt.cuda  small_yunet_0.5_silu_160.pt  small_yunet_0.5_silu_160.pt.cuda  small_yunet_0.5_silu_320.pt  small_yunet_0.5_silu_320.pt.cuda  small_yunet_0.5_silu_640.pt  small_yunet_0.5_silu_640.pt.cuda
face_cropping/scripts/: download_model.bash  download_models.bash  peer_image_display.py  peer_image_mock.py
face_cropping/src/: FaceCropper.cpp  FaceCropper.h  FaceCroppingNodeConfiguration.cpp  FaceCroppingNodeConfiguration.h  FaceDetector.cpp  FaceDetector.h  OpencvFaceDetector.cpp  OpencvFaceDetector.h  OpencvUtils.h  Parameters.cpp  SinglePositionKalmanFilter.cpp  SinglePositionKalmanFilter.h  TorchFaceDetector.cpp  TorchFaceDetector.h  face_cropping_node.cpp  face_cropping_webrtc_node.cpp  main.cpp  utils.h
map_image_generator/: CMakeLists.txt  package.xml
map_image_generator/launch/: map_image_generator.launch  map_image_generator.launch.xml
map_image_generator/src/: GoalConverter.cpp  MapImageGenerator.cpp  MapLabelsConverter.cpp  Parameters.cpp  main.cpp  utils.cpp
map_image_generator/srv/: ImageGoalToMapGoal.srv
opentera-webrtc-ros/: CMakeLists.txt  README.md  package.xml  setup.py
opentera-webrtc-ros/include/: RosAudioSource.h  RosDataChannelBridge.h  RosJsonDataHandler.h  RosNodeParameters.h  RosSignalingServerconfiguration.h  RosStreamBridge.h  RosVideoSource.h  RosWebRTCBridge.h
opentera-webrtc-ros/launch/: beam.launch  opentera_data_test.launch  ros_data_channel_client.launch  ros_stream_client.launch  sim_beam.launch
opentera-webrtc-ros/msg/: PeerImage.msg
opentera-webrtc-ros/scripts/: opentera_webrtc_audio_mixer.py
opentera-webrtc-ros/src/: RosDataChannelBridge.cpp  RosJsonDataHandler.cpp  RosNodeParameters.cpp  RosSignalingServerConfiguration.cpp  RosStreamBridge.cpp
opentera_client_ros/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
opentera_client_ros/config/: client_config.json
opentera_client_ros/launch/: client.launch  client.launch.xml
opentera_client_ros/scripts/: opentera_client_ros.py
opentera_protobuf_messages/: .gitignore  CMakeLists.txt  package.xml  setup.py
opentera_webrtc_demos/: CMakeLists.txt  README.md  package.xml
opentera_webrtc_demos/config/: configuration_demo.cfg  configuration_demo_ec.cfg  configuration_demo_studio.cfg  configuration_demo_studio_ec.cfg  demo_respeaker_usb_4_mic_array.cfg  demo_respeaker_usb_4_mic_array_ec.cfg  demo_respeaker_usb_4_mic_array_odas_studio.cfg  demo_respeaker_usb_4_mic_array_odas_studio_ec.cfg  model.rviz
opentera_webrtc_demos/launch/: beam_demo.launch  demo-dev.launch  demo-dev.launch.xml  demo-loopback.launch  demo-loopback.launch.xml  demo-odas.launch  demo-odas.launch.xml  demo-offline.launch  demo-offline.launch.xml  demo-online.launch  demo-online.launch.xml  demo-rosbridge.launch  demo.launch  demo.launch.xml  demo_dev.launch.xml  demo_loopback.launch.xml  demo_odas.launch.py  demo_odas.launch.xml  demo_offline.launch.py  demo_offline.launch.xml  demo_online.launch.py  demo_online.launch.xml  model_viewer.launch  model_viewer.launch.xml  opentera_demo.launch  opentera_demo.launch.xml  opentera_signaling_server.launch  opentera_signaling_server.launch.xml  opentera_turtlebot_sim.launch  opentera_turtlebot_sim.launch.xml
opentera_webrtc_demos/scripts/: robot_status.py  start_signaling_server.sh  start_signaling_server_tls.sh
opentera_webrtc_demos/worlds/: turtlebot3_house.world
opentera_webrtc_robot_gui/: CMakeLists.txt  README.md  package.xml  setup.py
opentera_webrtc_robot_gui/launch/: test_gui.launch  test_gui.launch.xml
opentera_webrtc_robot_gui/scripts/: opentera_webrtc_robot_gui.py
opentera_webrtc_robot_gui/src/: BatteryStatistics.cpp  ConfigDialog.cpp  ConfigDialog.h  GraphicsViewToolbar.cpp  GraphicsViewToolbar.h  LocalCameraWindow.cpp  LocalCameraWindow.h  MainWindow.cpp  MainWindow.h  ROSCameraView.cpp  ROSCameraView.h  Statistics.cpp  Statistics.h  main.cpp  utils.h
opentera_webrtc_ros/: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
opentera_webrtc_ros/include/: RosAudioSource.h  RosDataChannelBridge.h  RosJsonDataHandler.h  RosNodeParameters.h  RosParamUtils.h  RosSignalingServerconfiguration.h  RosStreamBridge.h  RosVideoSource.h  RosVideoStreamConfiguration.h  RosWebRTCBridge.h
opentera_webrtc_ros/launch/: beam.launch  beam.launch.xml  opentera_data_test.launch  opentera_data_test.launch.xml  ros_data_channel_client.launch  ros_data_channel_client.launch.xml  ros_json_data_handler.launch  ros_json_data_handler.launch.xml  ros_stream_client.launch  ros_stream_client.launch.xml  sim_beam.launch  sim_beam.launch.xml
opentera_webrtc_ros/opentera_webrtc_ros/: libmapimageconverter.py  libnavigation.py  libyamldatabase.py
opentera_webrtc_ros/scripts/: goal_manager.py  labels_manager.py  liblabelsdatabase.py  libnavigation.py  libposediff.py  opentera_webrtc_audio_mixer.py
opentera_webrtc_ros/src/: RosAudioSource.cpp  RosDataChannelBridge.cpp  RosJsonDataHandler.cpp  RosParamUtils.cpp  (+5 more)
opentera_webrtc_ros_msgs/: CMakeLists.txt  package.xml
opentera_webrtc_rosbridge_server/: CMakeLists.txt  README.md  package.xml  setup.py
turtlebot3_beam_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+175 files in other folders)
