<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>map_image_generator</name>
    <version>0.0.0</version>
    <description>The map_image_generator package</description>
    <maintainer email="dominic.letourneau@usherbrooke.ca">Dominic Létourneau</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>

    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>rtabmap_msgs</depend>
    <depend>opentera_webrtc_ros_msgs</depend>
    <depend>odas_ros</depend>

    <depend>cv_bridge</depend>
    <depend>framework</depend>
    <depend>image_transport</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_geometry_msgs</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
