<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>opentera_client_ros</name>
    <version>0.0.0</version>
    <description>The opentera_client_ros package</description>
    <maintainer email="dominic.letourneau@usherbrooke.ca">Dominic Létourneau</maintainer>
    <license>Apache-2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclpy</depend>

    <depend>std_msgs</depend>
    <depend>opentera_webrtc_ros_msgs</depend>
    <depend>opentera_protobuf_messages</depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
